--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <version>2.1.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-storage</artifactId>
+      <version>2.22.1</version>
+    </dependency>
+
     <!-- test scope -->
     <dependency>
       <groupId>junit</groupId>
